syntax="proto3";                // Version of protobuf
package msg;                     // Current package name
option go_package = "./msg";  // Go 服务器端代码的包路径

enum MsgId {
  MSG_Default = 0;  
  MSG_CS_Ping = 1;  // 心跳请求
  MSG_SC_Pong = 2;  // 心跳响应

  MSG_CS_Login = 101;  // 登录请求
  MSG_SC_Login = 102;  // 登录响应

  MSG_CS_Register = 103;  // 注册请求
  MSG_SC_Register = 104;  // 注册响应
  
}

message CS_Ping {
  int64 Timestamp = 1;
}
message SC_Pong {
  int64 Timestamp = 1;
}


message PlayerInfo {
    int32 headId = 1;
    string account = 2;
    string nickName = 3;
}


/**
 * 登录请求
 */
message CS_Login {
    string account = 1;
    string password = 2;
    int32 serverId = 3;
}

/**
 * 登录响应
 */
message SC_Login {
    int32 code = 1;
    string token = 2;
    PlayerInfo playerInfo = 3;
}

/**
 * 注册请求
 */
message CS_Register {
    string account = 1;
    string password = 2;  
    int32 headId=3;
}

/**
 * 注册响应
 */
message SC_Register {
    int32 code = 1;
}